<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_simple_tests</name>
  <version>0.0.1</version>
  <description>simple pub/sub/service tests for ROS 2</description>
  <maintainer email="todo@todo.org">todo</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nav_msgs</depend>
  <depend>rcl</depend>
  <depend>rcl_logging_spdlog</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rmw</depend>
  <depend>spdlog</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
